blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/Engagement__c.object-meta.xml
<CustomObject>
    <description>One signed piece of work for a client: a retainer or a fixed-scope project. Holds scope, fee, term and team. Created when a deal is won. Renewal deals point back to it, and its delivery pipeline tracks the work.</description>
    <label>Engagement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>