blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Access_received__c.field-meta.xml
<CustomField>
    <fullName>Access_received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The client has given the accounts, logins and assets needed to start work.</description>
    <label>Access received</label>
    <type>Checkbox</type>
</CustomField>