blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Account_lead__c.field-meta.xml
<CustomField>
    <fullName>Account_lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member responsible for the client relationship on this engagement.</description>
    <label>Account lead</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Engagements Account lead</relationshipLabel>
    <relationshipName>Engagement_Account_lead</relationshipName>
    <type>Lookup</type>
</CustomField>