blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows every retainer and project a client has had with us.</description>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>