blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Delivery_lead__c.field-meta.xml
<CustomField>
    <fullName>Delivery_lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member responsible for getting the work done.</description>
    <label>Delivery lead</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Engagements Delivery lead</relationshipLabel>
    <relationshipName>Engagement_Delivery_lead</relationshipName>
    <type>Lookup</type>
</CustomField>