blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>Last day of the current term. A renewal deal opens 90 days before it for retainers.</description>
    <label>End date</label>
    <type>Date</type>
</CustomField>