blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/End_reason__c.field-meta.xml
<CustomField>
    <fullName>End_reason__c</fullName>
    <description>Why the engagement ended early or was not renewed. Required on the terminated stage.</description>
    <label>End reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget cut</fullName>
            </value>
            <value>
                <fullName>Went in-house</fullName>
            </value>
            <value>
                <fullName>Moved to another agency</fullName>
            </value>
            <value>
                <fullName>Unhappy with results</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Client closed or acquired</fullName>
            </value>
            <value>
                <fullName>We ended it</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>