blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Engagement_type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_type__c</fullName>
    <description>Whether this is a monthly retainer or a fixed-scope project. Retainers renew, projects end.</description>
    <label>Engagement type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>