blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <description>Account lead's current view of the relationship and results. Reviewed at least monthly.</description>
    <label>Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>