blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Hours_per_month__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_month__c</fullName>
    <description>Hours of team time included each month, used to check scope against what is delivered.</description>
    <label>Hours per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>