blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Monthly_fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_fee__c</fullName>
    <description>Monthly retainer fee, excluding media spend. Empty for fixed-scope projects.</description>
    <label>Monthly fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>