blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Next_review_date__c.field-meta.xml
<CustomField>
    <fullName>Next_review_date__c</fullName>
    <description>The date of the next client review meeting. Empty means no review is booked.</description>
    <label>Next review date</label>
    <type>Date</type>
</CustomField>