blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Notice_period_days__c.field-meta.xml
<CustomField>
    <fullName>Notice_period_days__c</fullName>
    <description>Days of notice either side must give to end the engagement early.</description>
    <label>Notice period (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>