blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Project_fee__c.field-meta.xml
<CustomField>
    <fullName>Project_fee__c</fullName>
    <description>Total fixed fee for a project. Empty for retainers.</description>
    <label>Project fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>