blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Scope_summary__c.field-meta.xml
<CustomField>
    <fullName>Scope_summary__c</fullName>
    <description>What we are and are not committed to deliver, copied from the signed statement of work.</description>
    <label>Scope summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>