blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Service_line__c.field-meta.xml
<CustomField>
    <fullName>Service_line__c</fullName>
    <description>The main service delivered. One value so revenue and margin can be reported by service.</description>
    <label>Service line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid media</fullName>
            </value>
            <value>
                <fullName>SEO and content</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Brand and creative</fullName>
            </value>
            <value>
                <fullName>Web build</fullName>
            </value>
            <value>
                <fullName>Email and CRM</fullName>
            </value>
            <value>
                <fullName>GTM engineering</fullName>
            </value>
            <value>
                <fullName>Strategy and consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>