blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Where the record is in its pipeline. Restricted to the pipeline's stages.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Kickoff done</fullName>
            </value>
            <value>
                <fullName>First deliverables</fullName>
            </value>
            <value>
                <fullName>Steady state</fullName>
            </value>
            <value>
                <fullName>At risk</fullName>
            </value>
            <value>
                <fullName>Wrapping up</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>