blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>First day of the contracted work.</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>