blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/validationRules/Gate_delivery_at_risk.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_delivery_at_risk</fullName>
    <active>true</active>
    <description>Stage gate: Delivery, At risk and later stages need Health and Next review date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Onboarding", 1, "Kickoff done", 2, "First deliverables", 3, "Steady state", 4, "At risk", 5, "Wrapping up", 6, "Completed", 7, 0) &gt;= 5, OR(ISBLANK(TEXT(Health__c)), ISBLANK(Next_review_date__c)))</errorConditionFormula>
    <errorMessage>Fill in Health and Next review date before moving to At risk.</errorMessage>
</ValidationRule>