blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/validationRules/Gate_delivery_first_deliverables.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_delivery_first_deliverables</fullName>
    <active>true</active>
    <description>Stage gate: Delivery, First deliverables and later stages need Next review date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Onboarding", 1, "Kickoff done", 2, "First deliverables", 3, "Steady state", 4, "At risk", 5, "Wrapping up", 6, "Completed", 7, 0) &gt;= 3, ISBLANK(Next_review_date__c))</errorConditionFormula>
    <errorDisplayField>Next_review_date__c</errorDisplayField>
    <errorMessage>Fill in Next review date before moving to First deliverables.</errorMessage>
</ValidationRule>