blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/validationRules/Gate_delivery_kickoff_done.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_delivery_kickoff_done</fullName>
    <active>true</active>
    <description>Stage gate: Delivery, Kickoff done and later stages need Access received and Scope summary.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Onboarding", 1, "Kickoff done", 2, "First deliverables", 3, "Steady state", 4, "At risk", 5, "Wrapping up", 6, "Completed", 7, 0) &gt;= 2, OR(NOT(Access_received__c), ISBLANK(Scope_summary__c)))</errorConditionFormula>
    <errorMessage>Fill in Access received and Scope summary before moving to Kickoff done.</errorMessage>
</ValidationRule>