blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/validationRules/Gate_delivery_steady_state.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_delivery_steady_state</fullName>
    <active>true</active>
    <description>Stage gate: Delivery, Steady state and later stages need Health and Next review date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Onboarding", 1, "Kickoff done", 2, "First deliverables", 3, "Steady state", 4, "At risk", 5, "Wrapping up", 6, "Completed", 7, 0) &gt;= 4, OR(ISBLANK(TEXT(Health__c)), ISBLANK(Next_review_date__c)))</errorConditionFormula>
    <errorMessage>Fill in Health and Next review date before moving to Steady state.</errorMessage>
</ValidationRule>