blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/validationRules/Lost_delivery_terminated.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_delivery_terminated</fullName>
    <active>true</active>
    <description>Lost reason: Delivery, Terminated needs End reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Terminated"), ISBLANK(TEXT(End_reason__c)))</errorConditionFormula>
    <errorDisplayField>End_reason__c</errorDisplayField>
    <errorMessage>Fill in End reason before closing this as Terminated.</errorMessage>
</ValidationRule>