blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/listViews/Active_engagements.listView-meta.xml
<ListView>
    <fullName>Active_engagements</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Health__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Onboarding,Kickoff done,First deliverables,Steady state,At risk,Wrapping up</value>
    </filters>
    <label>Active engagements</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>