blueprints/agency-marketing/salesforce/force-app/main/default/objects/Engagement__c/listViews/Reviews_overdue.listView-meta.xml
<ListView>
    <fullName>Reviews_overdue</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Next_review_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Onboarding,Kickoff done,First deliverables,Steady state,At risk,Wrapping up</value>
    </filters>
    <filters>
        <field>Next_review_date__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <filters>
        <field>Next_review_date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Reviews overdue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>